// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search Component renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "paddingBottom": 8,
        "paddingLeft": 15,
        "paddingRight": 15,
        "paddingTop": 8,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": "#9cc5a1",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 40,
          "paddingBottom": 0,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 0,
        },
      ]
    }
  >
    <Icon
      color="#9cc5a1"
      name="search"
      size={18}
    />
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      onChangeText={[Function]}
      placeholder="Buscar tarefas..."
      placeholderTextColor="#9cc5a1"
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "color": "#1f2421",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "fontSize": 14,
            "fontWeight": "400",
            "paddingBottom": 0,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 0,
          },
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`Search Component renders with value and shows clear button 1`] = `
<View
  style={
    Array [
      Object {
        "paddingBottom": 8,
        "paddingLeft": 15,
        "paddingRight": 15,
        "paddingTop": 8,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": "#9cc5a1",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 40,
          "paddingBottom": 0,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 0,
        },
      ]
    }
  >
    <Icon
      color="#9cc5a1"
      name="search"
      size={18}
    />
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      onChangeText={[Function]}
      placeholder="Buscar tarefas..."
      placeholderTextColor="#9cc5a1"
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "color": "#1f2421",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "fontSize": 14,
            "fontWeight": "400",
            "paddingBottom": 0,
            "paddingLeft": 8,
            "paddingRight": 8,
            "paddingTop": 0,
          },
        ]
      }
      underlineColorAndroid="transparent"
      value="test"
    />
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "opacity": 1,
          "paddingBottom": 5,
          "paddingLeft": 5,
          "paddingRight": 5,
          "paddingTop": 5,
        }
      }
      testID="search-clear-button"
    >
      <Icon
        color="#9cc5a1"
        name="x"
        size={18}
      />
    </View>
  </View>
</View>
`;
